--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <html lang="en">
 <!--<![endif]-->
 <!-- Head BEGIN -->
+
 <head>
   <meta charset="utf-8">
   <title>달소프트</title>
@@ -15,7 +16,8 @@
   <link rel="shortcut icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
 
   <!-- Fonts START -->
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all"
+    rel="stylesheet" type="text/css">
   <!-- Fonts END -->
 
   <!-- Global styles START -->
@@ -41,225 +43,264 @@
 <!-- Head END -->
 
 <!-- Body BEGIN -->
+
 <body class="corporate" oncontextmenu="return false" onselectstart="return false">
 
-    <!-- BEGIN HEADER -->
-    <div class="header">
-      <div class="container">
-        <a class="site-logo" href="index.html"><img src="assets/corporate/img/logos/logo-corp-red.png" alt="dalsoft"></a>
+  <!-- BEGIN HEADER -->
+  <div class="header">
+    <div class="container">
+      <a class="site-logo" href="index.html">
+        <img src="assets/corporate/img/logos/logo-corp-red.png" alt="dalsoft">
+      </a>
 
-        <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
+      <a href="javascript:void(0);" class="mobi-toggler">
+        <i class="fa fa-bars"></i>
+      </a>
 
-        <!-- BEGIN NAVIGATION -->
-        <div class="header-navigation pull-right font-transform-inherit">
-          <ul>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
-                 ABOUT
+      <!-- BEGIN NAVIGATION -->
+      <div class="header-navigation pull-right font-transform-inherit">
+        <ul>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              ABOUT
 
-              </a>
+            </a>
 
-              <ul class="dropdown-menu">
-                <li><a href="/menu/about/introcom.html">회사소개</a></li>
-                <li><a href="/menu/about/greetingceo.html">CEO인사말</a></li>
-                <li><a href="/menu/about/history.html">연혁</a></li>
-              </ul>
-            </li>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="/menu/about/introcom.html">회사소개</a>
+              </li>
+              <li>
+                <a href="/menu/about/greetingceo.html">CEO인사말</a>
+              </li>
+              <li>
+                <a href="/menu/about/history.html">연혁</a>
+              </li>
+            </ul>
+          </li>
 
 
 
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
-                SERVICE
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              SERVICE
 
-              </a>
+            </a>
 
-              <ul class="dropdown-menu">
-                <li><a href="/menu/service/software.html">프로그램 개발</a></li>
-                <li><a href="/menu/service/mobile.html">모바일 앱 개발</a></li>
-                <li><a href="/menu/service/smartcontents.html">스마트 콘텐츠 제작</a></li>
-                <li><a href="/menu/service/multimedia.html">멀티미디어 제작</a></li>
-              </ul>
-            </li>
-            <li >
-              <a href="contactus.html">
-                CONTACT US
+            <ul class="dropdown-menu">
+              <li>
+                <a href="/menu/service/software.html">프로그램 개발</a>
+              </li>
+              <li>
+                <a href="/menu/service/mobile.html">모바일 앱 개발</a>
+              </li>
+              <li>
+                <a href="/menu/service/smartcontents.html">스마트 콘텐츠 제작</a>
+              </li>
+              <li>
+                <a href="/menu/service/multimedia.html">멀티미디어 제작</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="contactus.html">
+              CONTACT US
 
-              </a>
+            </a>
 
-            </li>
+          </li>
 
-          </ul>
-        </div>
-        <!-- END NAVIGATION -->
+        </ul>
       </div>
+      <!-- END NAVIGATION -->
     </div>
-    <!-- Header END -->
+  </div>
+  <!-- Header END -->
 
-    <!-- BEGIN SLIDER -->
-    <div class="page-slider margin-bottom-40">
-        <div id="carousel-example-generic" class="carousel slide carousel-slider">
-            <!-- Indicators -->
-            <ol class="carousel-indicators carousel-indicators-frontend">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            </ol>
+  <!-- BEGIN SLIDER -->
+  <div class="page-slider margin-bottom-40">
+    <div id="carousel-example-generic" class="carousel slide carousel-slider">
+      <!-- Indicators -->
+      <ol class="carousel-indicators carousel-indicators-frontend">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <!-- First slide -->
-                <div class="item carousel-item-eight active">
-                    <div class="container">
-                        <div class="carousel-position-six">
-                            <p class="carousel-subtitle-v6 text-uppercase" data-animation="animated fadeInDown">
-                                	<a href="/menu/service/smartcontents.html" style="text-decoration:none;color:white; ">스마트 콘텐츠 터치툰</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Second slide -->
-                <div class="item carousel-item-nine">
-                    <div class="container">
-                        <div class="carousel-position-six">
-                            <p class="carousel-subtitle-v6 text-uppercase" data-animation="animated fadeInDown">
-                                	<a href="/menu/service/software.html" style="text-decoration:none;color:white;">다양한 프로그램 개발</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <!-- First slide -->
+        <div class="item carousel-item-eight active">
+          <div class="container">
+            <div class="carousel-position-six">
+              <p class="carousel-subtitle-v6 text-uppercase" data-animation="animated fadeInDown">
+                <a href="/menu/service/smartcontents.html" style="text-decoration:none;color:white; ">스마트 콘텐츠 터치툰</a>
+              </p>
             </div>
-
-            <!-- Controls -->
-            <a class="left carousel-control carousel-control-shop carousel-control-frontend" href="#carousel-example-generic" role="button" data-slide="prev">
-                <i class="fa fa-angle-left" aria-hidden="true"></i>
-            </a>
-            <a class="right carousel-control carousel-control-shop carousel-control-frontend" href="#carousel-example-generic" role="button" data-slide="next">
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
-            </a>
+          </div>
         </div>
-    </div>
-    <!-- END SLIDER -->
 
-    <div class="main">
-      <div class="container">
-		<!-- BEGIN RECENT WORKS -->
-              <div class="row front-team">
-                <ul class="list-unstyled">
-                  <li class="col-md-3">
-                    <div class="thumbnail">
-                      <a href="/menu/service/software.html"><img alt="Windows software" src="assets/pages/img/people/img1-large.jpg"></a>
-                      <h3>
-                        <a href="/menu/service/software.html" style="text-decoration:none"><strong>프로그램 개발</strong></a>
-                        <small>software</small>
-                      </h3>
-                      <p>윈도우즈, OS 상에서 동작하는 프로그램과 솔루션을 직접 제작하여 제공합니다.</p>
-                    </div>
-                  </li>
-                  <li class="col-md-3">
-                    <div class="thumbnail">
-                      <a href="/menu/service/mobile.html"><img alt="Mobile Application" src="assets/pages/img/people/img4-large.jpg"></a>
-                      <h3>
-                        <a href="/menu/service/mobile.html" style="text-decoration:none"><strong>모바일 앱 개발</strong></a>
-                        <small>Mobile Application</small>
-                      </h3>
-                      <p>iOS와 Android에서 동작 가능한 모바일 어플리케이션을 제작하여 제공합니다.</p>
-                    </div>
-                  </li>
-                  <li class="col-md-3">
-                    <div class="thumbnail">
-                      <a href="/menu/service/smartcontents.html"><img alt="Smart Contents Making" src="assets/pages/img/people/img2-large.jpg"></a>
-                      <h3>
-                        <a href="/menu/service/smartcontents.html" style="text-decoration:none"><strong>스마트 컨텐츠 제작</strong></a>
-                        <small>Smart Contents Making</small>
-                      </h3>
-                      <p>다양한 형식의 콘텐츠를 제작하거나 배포할 수 있는 시스템을 구축하여 제공합니다.</p>
-                    </div>
-                  </li>
-                  <li class="col-md-3">
-                    <div class="thumbnail">
-                      <a href="/menu/service/multimedia.html"><img alt="Multimedia Making" src="assets/pages/img/people/img5-large.jpg"></a>
-                      <h3>
-                        <a href="/menu/service/multimedia.html" style="text-decoration:none"><strong>멀티미디어 제작</strong></a>
-                        <small>Multimedia Making</small>
-                      </h3>
-                      <p>영상 제작에 관한 기획력과 기술력을 모두 갖춰 차별화된 영상을 제작하여 제공합니다.</p>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-        <!-- END RECENT WORKS -->
+        <!-- Second slide -->
+        <div class="item carousel-item-nine">
+          <div class="container">
+            <div class="carousel-position-six">
+              <p class="carousel-subtitle-v6 text-uppercase" data-animation="animated fadeInDown">
+                <a href="/menu/service/software.html" style="text-decoration:none;color:white;">다양한 프로그램 개발</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <!-- Controls -->
+      <a class="left carousel-control carousel-control-shop carousel-control-frontend" href="#carousel-example-generic" role="button"
+        data-slide="prev">
+        <i class="fa fa-angle-left" aria-hidden="true"></i>
+      </a>
+      <a class="right carousel-control carousel-control-shop carousel-control-frontend" href="#carousel-example-generic" role="button"
+        data-slide="next">
+        <i class="fa fa-angle-right" aria-hidden="true"></i>
+      </a>
+    </div>
+  </div>
+  <!-- END SLIDER -->
+
+  <div class="main">
+    <div class="container">
+      <!-- BEGIN RECENT WORKS -->
+      <div class="row front-team">
+        <ul class="list-unstyled">
+          <li class="col-md-3">
+            <div class="thumbnail">
+              <a href="/menu/service/software.html">
+                <img alt="Windows software" src="assets/pages/img/people/img1-large.jpg">
+              </a>
+              <h3>
+                <a href="/menu/service/software.html" style="text-decoration:none">
+                  <strong>프로그램 개발</strong>
+                </a>
+                <small>software</small>
+              </h3>
+              <p>윈도우즈, OS 상에서 동작하는 프로그램과 솔루션을 직접 제작하여 제공합니다.</p>
+            </div>
+          </li>
+          <li class="col-md-3">
+            <div class="thumbnail">
+              <a href="/menu/service/mobile.html">
+                <img alt="Mobile Application" src="assets/pages/img/people/img4-large.jpg">
+              </a>
+              <h3>
+                <a href="/menu/service/mobile.html" style="text-decoration:none">
+                  <strong>모바일 앱 개발</strong>
+                </a>
+                <small>Mobile Application</small>
+              </h3>
+              <p>iOS와 Android에서 동작 가능한 모바일 어플리케이션을 제작하여 제공합니다.</p>
+            </div>
+          </li>
+          <li class="col-md-3">
+            <div class="thumbnail">
+              <a href="/menu/service/smartcontents.html">
+                <img alt="Smart Contents Making" src="assets/pages/img/people/img2-large.jpg">
+              </a>
+              <h3>
+                <a href="/menu/service/smartcontents.html" style="text-decoration:none">
+                  <strong>스마트 컨텐츠 제작</strong>
+                </a>
+                <small>Smart Contents Making</small>
+              </h3>
+              <p>다양한 형식의 콘텐츠를 제작하거나 배포할 수 있는 시스템을 구축하여 제공합니다.</p>
+            </div>
+          </li>
+          <li class="col-md-3">
+            <div class="thumbnail">
+              <a href="/menu/service/multimedia.html">
+                <img alt="Multimedia Making" src="assets/pages/img/people/img5-large.jpg">
+              </a>
+              <h3>
+                <a href="/menu/service/multimedia.html" style="text-decoration:none">
+                  <strong>멀티미디어 제작</strong>
+                </a>
+                <small>Multimedia Making</small>
+              </h3>
+              <p>영상 제작에 관한 기획력과 기술력을 모두 갖춰 차별화된 영상을 제작하여 제공합니다.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <!-- END RECENT WORKS -->
+    </div>
+  </div>
+
+
+  <!-- BEGIN PRE-FOOTER -->
+  <div class="pre-footer">
+    <div class="container">
+      <div class="row">
+        <!-- BEGIN BOTTOM CONTACTS -->
+        <div>
+          <h2>Our Contacts</h2>
+          <address class="margin-bottom-40">
+            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 김민호
+            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : ryokowantu@dalsoft.co.kr
+          </address>
+        </div>
+        <!-- END BOTTOM CONTACTS -->
       </div>
     </div>
+  </div>
+  <!-- END PRE-FOOTER -->
 
-
-    <!-- BEGIN PRE-FOOTER -->
-    <div class="pre-footer">
-      <div class="container">
-        <div class="row">
-          <!-- BEGIN BOTTOM CONTACTS -->
-          <div>
-            <h2>Our Contacts</h2>
-            <address class="margin-bottom-40">
-              	서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 임용수
-       			<br>
-				대표전화 : 02)6951-1622 &nbsp  팩스 : 02)2027-0795 &nbsp email : gninraw@dalsoft.co.kr
-            </address>
-          </div>
-          <!-- END BOTTOM CONTACTS -->
-        </div>
-      </div>
-    </div>
-    <!-- END PRE-FOOTER -->
-
-    <!-- BEGIN FOOTER -->
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-          <!-- BEGIN COPYRIGHT -->
-          <div class="col-md-4 col-sm-4 padding-top-10">
-
-          </div>
-          <!-- END COPYRIGHT -->
-          <!-- BEGIN PAYMENTS -->
-          <div class="col-md-4 col-sm-4" align="center">
-             2018 © Dalsoft. ALL Rights Reserved.
-          </div>
-          <!-- END PAYMENTS -->
+  <!-- BEGIN FOOTER -->
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <!-- BEGIN COPYRIGHT -->
+        <div class="col-md-4 col-sm-4 padding-top-10">
 
         </div>
+        <!-- END COPYRIGHT -->
+        <!-- BEGIN PAYMENTS -->
+        <div class="col-md-4 col-sm-4" align="center">
+          2018 © Dalsoft. ALL Rights Reserved.
+        </div>
+        <!-- END PAYMENTS -->
+
       </div>
     </div>
-    <!-- END FOOTER -->
+  </div>
+  <!-- END FOOTER -->
 
-    <!-- Load javascripts at bottom, this will reduce page load time -->
-    <!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) -->
-    <!--[if lt IE 9]>
+  <!-- Load javascripts at bottom, this will reduce page load time -->
+  <!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) -->
+  <!--[if lt IE 9]>
     <script src="assets/plugins/respond.min.js"></script>
     <![endif]-->
-    <script src="assets/plugins/jquery.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
-    <script src="assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
-    <!-- END CORE PLUGINS -->
+  <script src="assets/plugins/jquery.min.js" type="text/javascript"></script>
+  <script src="assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
+  <script src="assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
+  <!-- END CORE PLUGINS -->
 
-    <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
-    <script src="assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
-    <script src="assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
+  <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
+  <script src="assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script>
+  <!-- pop up -->
+  <script src="assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script>
+  <!-- slider for products -->
 
-    <script src="assets/corporate/scripts/layout.js" type="text/javascript"></script>
-    <script src="assets/pages/scripts/bs-carousel.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        jQuery(document).ready(function() {
-            Layout.init();
-            Layout.initOWL();
-            Layout.initTwitter();
-            //Layout.initFixHeaderWithPreHeader(); /* Switch On Header Fixing (only if you have pre-header) */
-            //Layout.initNavScrolling();
-        });
-    </script>
-    <!-- END PAGE LEVEL JAVASCRIPTS -->
+  <script src="assets/corporate/scripts/layout.js" type="text/javascript"></script>
+  <script src="assets/pages/scripts/bs-carousel.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    jQuery(document).ready(function () {
+      Layout.init();
+      Layout.initOWL();
+      Layout.initTwitter();
+      //Layout.initFixHeaderWithPreHeader(); /* Switch On Header Fixing (only if you have pre-header) */
+      //Layout.initNavScrolling();
+    });
+  </script>
+  <!-- END PAGE LEVEL JAVASCRIPTS -->
 </body>
 <!-- END BODY -->
+
 </html>
