--- a/menu/about/greetingceo.html
+++ b/menu/about/greetingceo.html
@@ -6,6 +6,7 @@
 <!--<![endif]-->
 
 <!-- Head BEGIN -->
+
 <head>
   <meta charset="utf-8">
   <title>회사소개</title>
@@ -16,7 +17,8 @@
   <link rel="shortcut icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
 
   <!-- Fonts START -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all"
+    rel="stylesheet" type="text/css">
   <!-- Fonts END -->
 
   <!-- Global styles START -->
@@ -43,159 +45,194 @@
 
 <!-- Body BEGIN -->
 <!-- 홈페이지 드래그 못하는 기능 -->
+
 <body class="corporate" oncontextmenu="return false" onselectstart="return false">
 
-    <!-- BEGIN HEADER -->
-    <div class="header">
-      <div class="container">
-        <a class="site-logo" href="../../index.html"><img src="../../assets/corporate/img/logos/logo-corp-red.png" alt="Metronic FrontEnd"></a>
+  <!-- BEGIN HEADER -->
+  <div class="header">
+    <div class="container">
+      <a class="site-logo" href="../../index.html">
+        <img src="../../assets/corporate/img/logos/logo-corp-red.png" alt="Metronic FrontEnd">
+      </a>
 
-        <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
+      <a href="javascript:void(0);" class="mobi-toggler">
+        <i class="fa fa-bars"></i>
+      </a>
 
-        <!-- BEGIN NAVIGATION -->
-        <div class="header-navigation pull-right font-transform-inherit">
-          <ul>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
-                 ABOUT
+      <!-- BEGIN NAVIGATION -->
+      <div class="header-navigation pull-right font-transform-inherit">
+        <ul>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              ABOUT
 
-              </a>
+            </a>
 
-              <ul class="dropdown-menu">
-                <li><a href="/menu/about/introcom.html">회사소개</a></li>
-                <li><a href="/menu/about/greetingceo.html">CEO인사말</a></li>
-                <li><a href="/menu/about/history.html">연혁</a></li>
-              </ul>
-            </li>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="/menu/about/introcom.html">회사소개</a>
+              </li>
+              <li>
+                <a href="/menu/about/greetingceo.html">CEO인사말</a>
+              </li>
+              <li>
+                <a href="/menu/about/history.html">연혁</a>
+              </li>
+            </ul>
+          </li>
 
 
 
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
-                SERVICE
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              SERVICE
 
-              </a>
+            </a>
 
-              <ul class="dropdown-menu">
-                <li><a href="/menu/service/software.html">프로그램 개발</a></li>
-                <li><a href="/menu/service/mobile.html">모바일 앱 개발</a></li>
-                <li><a href="/menu/service/smartcontents.html">스마트 콘텐츠 제작</a></li>
-                <li><a href="/menu/service/multimedia.html">멀티미디어 제작</a></li>
-              </ul>
-            </li>
-            <li >
-              <a href="../../contactus.html">
-                CONTACT US
+            <ul class="dropdown-menu">
+              <li>
+                <a href="/menu/service/software.html">프로그램 개발</a>
+              </li>
+              <li>
+                <a href="/menu/service/mobile.html">모바일 앱 개발</a>
+              </li>
+              <li>
+                <a href="/menu/service/smartcontents.html">스마트 콘텐츠 제작</a>
+              </li>
+              <li>
+                <a href="/menu/service/multimedia.html">멀티미디어 제작</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="../../contactus.html">
+              CONTACT US
 
-              </a>
+            </a>
 
-            </li>
+          </li>
 
-          </ul>
-        </div>
-        <!-- END NAVIGATION -->
-      </div>
-    </div>
-    <!-- Header END -->
-    <div class="main">
-      <div class="container">
-        <ul class="breadcrumb">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="javascript:;">About</a></li>
-            <li class="active">CEO인사말</li>
         </ul>
-        <div class="row margin-bottom-40">
-          <!-- BEGIN CONTENT -->
-          <div class="col-md-12 col-sm-12">
-            <h1>회사소개</h1>
-            <div class="content-page">
-			 <a class="btn" href="/menu/about/introcom.html"><h4>회사소개</h4></a>
-			 <a class="btn" href="/menu/about/greetingceo.html" style="color:#F29661"><h4>CEO인사말</h4></a>
-       <a class="btn" href="/menu/about/history.html"><h4>연혁</h4></a>
-       </div>
+      </div>
+      <!-- END NAVIGATION -->
+    </div>
+  </div>
+  <!-- Header END -->
+  <div class="main">
+    <div class="container">
+      <ul class="breadcrumb">
+        <li>
+          <a href="/index.html">Home</a>
+        </li>
+        <li>
+          <a href="javascript:;">About</a>
+        </li>
+        <li class="active">CEO인사말</li>
+      </ul>
+      <div class="row margin-bottom-40">
+        <!-- BEGIN CONTENT -->
+        <div class="col-md-12 col-sm-12">
+          <h1>회사소개</h1>
+          <div class="content-page">
+            <a class="btn" href="/menu/about/introcom.html">
+              <h4>회사소개</h4>
+            </a>
+            <a class="btn" href="/menu/about/greetingceo.html" style="color:#F29661">
+              <h4>CEO인사말</h4>
+            </a>
+            <a class="btn" href="/menu/about/history.html">
+              <h4>연혁</h4>
+            </a>
+          </div>
 
-            <div class="col-md-7 col-sm-7">
-            <h2>주식회사 달소프트 대표이사 임용수입니다.</h2><br><br>
+          <div class="col-md-7 col-sm-7">
+            <h2>주식회사 달소프트 대표이사 김민호입니다.</h2>
+            <br>
+            <br>
             <p class="pmaking">달소프트는 날마다 새롭게 변화하고 있는 IT 시장에서 새로운 경험과 즐거움을 선사할 수 있는 방법을 찾기 위해 고민하고 노력하고 있습니다.</p>
-            <p class="pmaking">저희는 모바일 어플리케이션 개발과 윈도우즈 프로그램 개발, 웹 개발을 전문적으로 외주 받아서 개발 납품 하는 외주 개발 전문 업체입니다. 개발 뿐만 아니라 각종 영상과 애니메이션 콘티 제작, 기업 홍보 영상/뮤직비디오/공익 광고 등 멀티미디어 콘텐츠 제작도 하고 있습니다.</p>
+            <p class="pmaking">저희는 모바일 어플리케이션 개발과 윈도우즈 프로그램 개발, 웹 개발을 전문적으로 외주 받아서 개발 납품 하는 외주 개발 전문 업체입니다. 개발 뿐만 아니라 각종 영상과 애니메이션 콘티 제작, 기업
+              홍보 영상/뮤직비디오/공익 광고 등 멀티미디어 콘텐츠 제작도 하고 있습니다.</p>
             <p class="pmaking">주식회사 달소프트는 고객님들께 새로운 경험과 즐거움을 선사할 수 있는 능력을 갖추고 있습니다. 저희에게 일을 의뢰하시면 진정한 외주 개발/외주 제작 전문가의 모습을 보여드리도록 하겠습니다.</p>
-            <p class="pmaking">지켜봐주십시오.<br>감사합니다.</p>
-            </div>
-
+            <p class="pmaking">지켜봐주십시오.
+              <br>감사합니다.</p>
           </div>
-          <!-- END CONTENT -->
-          </div>
-       </div>
-      </div>
-
-    <!-- BEGIN PRE-FOOTER -->
-    <div class="pre-footer">
-      <div class="container">
-        <div class="row">
-
-
-          <!-- BEGIN BOTTOM CONTACTS -->
-          <div >
-            <h2>Our Contacts</h2>
-            <address class="margin-bottom-40">
-              	서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 임용수
-       			<br>
-				대표전화 : 02)6951-1622 &nbsp  팩스 : 02)2027-0795 &nbsp email : gninraw@dalsoft.co.kr
-            </address>
-          </div>
-          <!-- END BOTTOM CONTACTS -->
-        </div>
-      </div>
-    </div>
-    <!-- END PRE-FOOTER -->
-
-    <!-- BEGIN FOOTER -->
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-md-4 col-sm-4 padding-top-10">
-
-          </div>
-          <!-- END COPYRIGHT -->
-          <!-- BEGIN COPYRIGHT -->
-          <div class="col-md-4 col-sm-4" align="center">
-             2018 © Dalsoft. ALL Rights Reserved.
-          </div>
-          <!-- END COPYRIGHT -->
 
         </div>
+        <!-- END CONTENT -->
       </div>
     </div>
-    <!-- END FOOTER -->
+  </div>
 
-    <!-- Load javascripts at bottom, this will reduce page load time -->
-    <!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) -->
-    <!--[if lt IE 9]>
+  <!-- BEGIN PRE-FOOTER -->
+  <div class="pre-footer">
+    <div class="container">
+      <div class="row">
+
+
+        <!-- BEGIN BOTTOM CONTACTS -->
+        <div>
+          <h2>Our Contacts</h2>
+          <address class="margin-bottom-40">
+            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 김민호
+            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : ryokowantu@dalsoft.co.kr
+          </address>
+        </div>
+        <!-- END BOTTOM CONTACTS -->
+      </div>
+    </div>
+  </div>
+  <!-- END PRE-FOOTER -->
+
+  <!-- BEGIN FOOTER -->
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-4 col-sm-4 padding-top-10">
+
+        </div>
+        <!-- END COPYRIGHT -->
+        <!-- BEGIN COPYRIGHT -->
+        <div class="col-md-4 col-sm-4" align="center">
+          2018 © Dalsoft. ALL Rights Reserved.
+        </div>
+        <!-- END COPYRIGHT -->
+
+      </div>
+    </div>
+  </div>
+  <!-- END FOOTER -->
+
+  <!-- Load javascripts at bottom, this will reduce page load time -->
+  <!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) -->
+  <!--[if lt IE 9]>
     <script src="../../assets/plugins/respond.min.js"></script>
     <![endif]-->
-    <script src="../../assets/plugins/jquery.min.js" type="text/javascript"></script>
-    <script src="../../assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
-    <script src="../../assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="../../assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
-    <!-- END CORE PLUGINS -->
+  <script src="../../assets/plugins/jquery.min.js" type="text/javascript"></script>
+  <script src="../../assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
+  <script src="../../assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="../../assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
+  <!-- END CORE PLUGINS -->
 
-    <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
-    <script src="../../assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
-    <script src="../../assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
+  <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
+  <script src="../../assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script>
+  <!-- pop up -->
+  <script src="../../assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script>
+  <!-- slider for products -->
 
-    <script src="../../assets/corporate/scripts/layout.js" type="text/javascript"></script>
-    <script src="../../assets/pages/scripts/bs-carousel.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        jQuery(document).ready(function() {
-            Layout.init();
-            Layout.initOWL();
-            Layout.initTwitter();
-            //Layout.initFixHeaderWithPreHeader(); /* Switch On Header Fixing (only if you have pre-header) */
-            //Layout.initNavScrolling();
-        });
-    </script>
-    <!-- END PAGE LEVEL JAVASCRIPTS -->
+  <script src="../../assets/corporate/scripts/layout.js" type="text/javascript"></script>
+  <script src="../../assets/pages/scripts/bs-carousel.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    jQuery(document).ready(function () {
+      Layout.init();
+      Layout.initOWL();
+      Layout.initTwitter();
+      //Layout.initFixHeaderWithPreHeader(); /* Switch On Header Fixing (only if you have pre-header) */
+      //Layout.initNavScrolling();
+    });
+  </script>
+  <!-- END PAGE LEVEL JAVASCRIPTS -->
 </body>
 <!-- END BODY -->
+
 </html>
