--- a/menu/about/introcom.html
+++ b/menu/about/introcom.html
@@ -6,6 +6,7 @@
 <!--<![endif]-->
 
 <!-- Head BEGIN -->
+
 <head>
   <meta charset="utf-8">
   <title>회사소개</title>
@@ -16,7 +17,8 @@
   <link rel="shortcut icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
 
   <!-- Fonts START -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|PT+Sans+Narrow|Source+Sans+Pro:200,300,400,600,700,900&amp;subset=all"
+    rel="stylesheet" type="text/css">
   <!-- Fonts END -->
 
   <!-- Global styles START -->
@@ -42,164 +44,215 @@
 <!-- Head END -->
 
 <!-- Body BEGIN -->
+
 <body class="corporate" oncontextmenu="return false" onselectstart="return false">
 
-    <!-- BEGIN HEADER -->
-    <div class="header">
-      <div class="container">
-        <a class="site-logo" href="../../index.html"><img src="../../assets/corporate/img/logos/logo-corp-red.png" alt="Metronic FrontEnd"></a>
+  <!-- BEGIN HEADER -->
+  <div class="header">
+    <div class="container">
+      <a class="site-logo" href="../../index.html">
+        <img src="../../assets/corporate/img/logos/logo-corp-red.png" alt="Metronic FrontEnd">
+      </a>
 
-        <a href="javascript:void(0);" class="mobi-toggler"><i class="fa fa-bars"></i></a>
+      <a href="javascript:void(0);" class="mobi-toggler">
+        <i class="fa fa-bars"></i>
+      </a>
 
-        <!-- BEGIN NAVIGATION -->
-        <div class="header-navigation pull-right font-transform-inherit">
-          <ul>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
-                 ABOUT
+      <!-- BEGIN NAVIGATION -->
+      <div class="header-navigation pull-right font-transform-inherit">
+        <ul>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              ABOUT
 
-              </a>
+            </a>
 
-              <ul class="dropdown-menu">
-                <li><a href="/menu/about/introcom.html">회사소개</a></li>
-                <li><a href="/menu/about/greetingceo.html">CEO인사말</a></li>
-                <li><a href="/menu/about/history.html">연혁</a></li>
-              </ul>
-            </li>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="/menu/about/introcom.html">회사소개</a>
+              </li>
+              <li>
+                <a href="/menu/about/greetingceo.html">CEO인사말</a>
+              </li>
+              <li>
+                <a href="/menu/about/history.html">연혁</a>
+              </li>
+            </ul>
+          </li>
 
 
 
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
-                SERVICE
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="javascript:;">
+              SERVICE
 
-              </a>
+            </a>
 
-              <ul class="dropdown-menu">
-                <li><a href="/menu/service/software.html">프로그램 개발</a></li>
-                <li><a href="/menu/service/mobile.html">모바일 앱 개발</a></li>
-                <li><a href="/menu/service/smartcontents.html">스마트 콘텐츠 제작</a></li>
-                <li><a href="/menu/service/multimedia.html">멀티미디어 제작</a></li>
-              </ul>
-            </li>
-            <li >
-              <a href="../../contactus.html">
-                CONTACT US
+            <ul class="dropdown-menu">
+              <li>
+                <a href="/menu/service/software.html">프로그램 개발</a>
+              </li>
+              <li>
+                <a href="/menu/service/mobile.html">모바일 앱 개발</a>
+              </li>
+              <li>
+                <a href="/menu/service/smartcontents.html">스마트 콘텐츠 제작</a>
+              </li>
+              <li>
+                <a href="/menu/service/multimedia.html">멀티미디어 제작</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="../../contactus.html">
+              CONTACT US
 
-              </a>
+            </a>
 
-            </li>
+          </li>
 
-          </ul>
-        </div>
-        <!-- END NAVIGATION -->
-      </div>
-    </div>
-    <!-- Header END -->
-    <div class="main">
-      <div class="container">
-        <ul class="breadcrumb">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="javascript:;">About</a></li>
-            <li class="active">회사소개</li>
         </ul>
-        <!-- BEGIN SIDEBAR & CONTENT -->
-        <div class="row margin-bottom-40">
-          <!-- BEGIN CONTENT -->
-          <div class="col-md-12 col-sm-12">
-            <h1>회사소개</h1>
-     <div class="content-page">
-			 <a class="btn" href="/menu/about/introcom.html" style="color:#F29661"><h4>회사소개</h4></a>
-			 <a class="btn" href="/menu/about/greetingceo.html"><h4>CEO인사말</h4></a>
-       <a class="btn" href="/menu/about/history.html"><h4>연혁</h4></a>
-     </div>
-
-            <div class="col-md-9 col-sm-9">
-            <h2><b>About DalSoft</b></h2><br><br>
-            <p class="pmaking">달소프트는 빠르게 변화하고 진화하고 있는 IT 시장에서 크리에이티브를 바탕으로 새로운 혁신을 꿈꾸는 기업입니다. 새롭게 변해가는 환경에서 도전적인 마인드와 열정적인 마인드를 바탕으로 항상 고객님께 신뢰를 드릴 수 있는 기업으로 발전해 나갈 수 있도록 노력하겠습니다. </p>
-            <h2><b>Service</b></h2><br><br>
-			<p class="pmaking"><b>Windows software</b><br>여러 분야의 다양한 작업들을 위한 윈도우 OS상에서 동작하는 프로그램과 솔루션을 직접 제작하여 제공합니다.</p>
-			<p class="pmaking"><b>Mobile Application</b><br>iOS와 Android에서 동작 가능한 모바일 앱을 고객들이 원하는 서비스와 UI / UX를 바탕으로 제작자와 사용자를 모두 만족할 수 있는 모바일 어플리케이션을 제작하여 제공합니다.</p>
-			<p class="pmaking"><b>Smart Content Making</b><br>웹과 모바일 상에서 다양한 인터렉션과 반응하여 움직이거나 재생할 수 있는 새로운 형식의 콘텐츠와 기존의 온라인 콘텐츠까지 다양한 형식의 콘텐츠를 제작하거나 배포할 수 있는 시스템을 구축하여 제공합니다.</p>
-			<p class="pmaking"><b>Multimedia (Movie, Animation, Video) Making</b><br>영화 스토리보드, 애니메이션 스토리보드, 기업 홍보 동영상, 뮤직비디오, 공익 광고 영상 등 다양한 분야의 영상을 제작할 수 있으며, 영상 제작에 관한 기획력과 기술력을 모두 갖춰 고객들이 원하는 차별화된 영상을 제작하여 제공합니다.</p>
-            </div>
-            <div class ="col-md-3 col-sm-3">
-            <a class="btn btn-primary" href="/menu/introDal.pdf" download><h4 style="color:white;">Dalsoft소개 PDF</h4></a>
-            </div>
-          </div>
-         </div>
-       </div>
       </div>
-
-
-    <!-- BEGIN PRE-FOOTER -->
-    <div class="pre-footer">
-      <div class="container">
-        <div class="row">
-
-
-          <!-- BEGIN BOTTOM CONTACTS -->
-          <div >
-            <h2>Our Contacts</h2>
-            <address class="margin-bottom-40">
-              	서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 임용수
-       			<br>
-				대표전화 : 02)6951-1622 &nbsp  팩스 : 02)2027-0795 &nbsp email : gninraw@dalsoft.co.kr
-            </address>
+      <!-- END NAVIGATION -->
+    </div>
+  </div>
+  <!-- Header END -->
+  <div class="main">
+    <div class="container">
+      <ul class="breadcrumb">
+        <li>
+          <a href="/index.html">Home</a>
+        </li>
+        <li>
+          <a href="javascript:;">About</a>
+        </li>
+        <li class="active">회사소개</li>
+      </ul>
+      <!-- BEGIN SIDEBAR & CONTENT -->
+      <div class="row margin-bottom-40">
+        <!-- BEGIN CONTENT -->
+        <div class="col-md-12 col-sm-12">
+          <h1>회사소개</h1>
+          <div class="content-page">
+            <a class="btn" href="/menu/about/introcom.html" style="color:#F29661">
+              <h4>회사소개</h4>
+            </a>
+            <a class="btn" href="/menu/about/greetingceo.html">
+              <h4>CEO인사말</h4>
+            </a>
+            <a class="btn" href="/menu/about/history.html">
+              <h4>연혁</h4>
+            </a>
           </div>
-          <!-- END BOTTOM CONTACTS -->
+
+          <div class="col-md-9 col-sm-9">
+            <h2>
+              <b>About DalSoft</b>
+            </h2>
+            <br>
+            <br>
+            <p class="pmaking">달소프트는 빠르게 변화하고 진화하고 있는 IT 시장에서 크리에이티브를 바탕으로 새로운 혁신을 꿈꾸는 기업입니다. 새롭게 변해가는 환경에서 도전적인 마인드와 열정적인 마인드를 바탕으로 항상 고객님께
+              신뢰를 드릴 수 있는 기업으로 발전해 나갈 수 있도록 노력하겠습니다. </p>
+            <h2>
+              <b>Service</b>
+            </h2>
+            <br>
+            <br>
+            <p class="pmaking">
+              <b>Windows software</b>
+              <br>여러 분야의 다양한 작업들을 위한 윈도우 OS상에서 동작하는 프로그램과 솔루션을 직접 제작하여 제공합니다.</p>
+            <p class="pmaking">
+              <b>Mobile Application</b>
+              <br>iOS와 Android에서 동작 가능한 모바일 앱을 고객들이 원하는 서비스와 UI / UX를 바탕으로 제작자와 사용자를 모두 만족할 수 있는 모바일 어플리케이션을 제작하여 제공합니다.</p>
+            <p class="pmaking">
+              <b>Smart Content Making</b>
+              <br>웹과 모바일 상에서 다양한 인터렉션과 반응하여 움직이거나 재생할 수 있는 새로운 형식의 콘텐츠와 기존의 온라인 콘텐츠까지 다양한 형식의 콘텐츠를 제작하거나 배포할 수 있는 시스템을 구축하여 제공합니다.</p>
+            <p class="pmaking">
+              <b>Multimedia (Movie, Animation, Video) Making</b>
+              <br>영화 스토리보드, 애니메이션 스토리보드, 기업 홍보 동영상, 뮤직비디오, 공익 광고 영상 등 다양한 분야의 영상을 제작할 수 있으며, 영상 제작에 관한 기획력과 기술력을 모두 갖춰 고객들이 원하는
+              차별화된 영상을 제작하여 제공합니다.</p>
+          </div>
+          <div class="col-md-3 col-sm-3">
+            <a class="btn btn-primary" href="/menu/introDal.pdf" download>
+              <h4 style="color:white;">Dalsoft소개 PDF</h4>
+            </a>
+          </div>
         </div>
       </div>
     </div>
-    <!-- END PRE-FOOTER -->
+  </div>
 
-    <!-- BEGIN FOOTER -->
-    <div class="footer">
-      <div class="container">
-        <div class="row">
-          <!-- BEGIN COPYRIGHT -->
-          <div class="col-md-4 col-sm-4 padding-top-10">
 
-          </div>
-          <!-- END COPYRIGHT -->
-          <!-- BEGIN PAYMENTS -->
-          <div class="col-md-4 col-sm-4" align="center">
-             2018 © Dalsoft. ALL Rights Reserved.
-          </div>
-          <!-- END PAYMENTS -->
+  <!-- BEGIN PRE-FOOTER -->
+  <div class="pre-footer">
+    <div class="container">
+      <div class="row">
 
+
+        <!-- BEGIN BOTTOM CONTACTS -->
+        <div>
+          <h2>Our Contacts</h2>
+          <address class="margin-bottom-40">
+            서울특별시 금천구 디지털로9길 99 (가산동, 스타밸리) 1303A호 &nbsp 대표이사 김민호
+            <br> 대표전화 : 02)6951-1622 &nbsp 팩스 : 02)2027-0795 &nbsp email : ryokowantu@dalsoft.co.kr
+          </address>
         </div>
+        <!-- END BOTTOM CONTACTS -->
       </div>
     </div>
-    <!-- END FOOTER -->
+  </div>
+  <!-- END PRE-FOOTER -->
 
-    <!-- Load javascripts at bottom, this will reduce page load time -->
-    <!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) -->
-    <!--[if lt IE 9]>
+  <!-- BEGIN FOOTER -->
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <!-- BEGIN COPYRIGHT -->
+        <div class="col-md-4 col-sm-4 padding-top-10">
+
+        </div>
+        <!-- END COPYRIGHT -->
+        <!-- BEGIN PAYMENTS -->
+        <div class="col-md-4 col-sm-4" align="center">
+          2018 © Dalsoft. ALL Rights Reserved.
+        </div>
+        <!-- END PAYMENTS -->
+
+      </div>
+    </div>
+  </div>
+  <!-- END FOOTER -->
+
+  <!-- Load javascripts at bottom, this will reduce page load time -->
+  <!-- BEGIN CORE PLUGINS (REQUIRED FOR ALL PAGES) -->
+  <!--[if lt IE 9]>
     <script src="../../assets/plugins/respond.min.js"></script>
     <![endif]-->
-    <script src="../../assets/plugins/jquery.min.js" type="text/javascript"></script>
-    <script src="../../assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
-    <script src="../../assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="../../assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
-    <!-- END CORE PLUGINS -->
+  <script src="../../assets/plugins/jquery.min.js" type="text/javascript"></script>
+  <script src="../../assets/plugins/jquery-migrate.min.js" type="text/javascript"></script>
+  <script src="../../assets/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="../../assets/corporate/scripts/back-to-top.js" type="text/javascript"></script>
+  <!-- END CORE PLUGINS -->
 
-    <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
-    <script src="../../assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script><!-- pop up -->
-    <script src="../../assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script><!-- slider for products -->
+  <!-- BEGIN PAGE LEVEL JAVASCRIPTS (REQUIRED ONLY FOR CURRENT PAGE) -->
+  <script src="../../assets/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script>
+  <!-- pop up -->
+  <script src="../../assets/plugins/owl.carousel/owl.carousel.min.js" type="text/javascript"></script>
+  <!-- slider for products -->
 
-    <script src="../../assets/corporate/scripts/layout.js" type="text/javascript"></script>
-    <script src="../../assets/pages/scripts/bs-carousel.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        jQuery(document).ready(function() {
-            Layout.init();
-            Layout.initOWL();
-            Layout.initTwitter();
-            //Layout.initFixHeaderWithPreHeader(); /* Switch On Header Fixing (only if you have pre-header) */
-            //Layout.initNavScrolling();
-        });
-    </script>
-    <!-- END PAGE LEVEL JAVASCRIPTS -->
+  <script src="../../assets/corporate/scripts/layout.js" type="text/javascript"></script>
+  <script src="../../assets/pages/scripts/bs-carousel.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    jQuery(document).ready(function () {
+      Layout.init();
+      Layout.initOWL();
+      Layout.initTwitter();
+      //Layout.initFixHeaderWithPreHeader(); /* Switch On Header Fixing (only if you have pre-header) */
+      //Layout.initNavScrolling();
+    });
+  </script>
+  <!-- END PAGE LEVEL JAVASCRIPTS -->
 </body>
 <!-- END BODY -->
+
 </html>
